Добавил ссылки в README

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Концепт электронного судового журнала Северного Морского Пути (СМП).
+# Концепт электронного судового журнала Северного Морского Пути (СМП).
+## Ссылки:
+- https://docs.cntd.ru/document/352252352
